# eternine

./: Cargo.toml  README.md
src/: color_detector.rs  input_simulator.rs  main.rs  screen_capture.rs
