[package]
name = "eternine"
version = "0.1.0"
edition = "2024"

[dependencies]
xcap = "0.7.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
image = "0.25.8"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1